Remove DatabaseArrowClient